--- a/flytinerary-front-end/styles.css
+++ b/flytinerary-front-end/styles.css
@@ -28,3 +28,23 @@ hr.short {
 	text-align:center;
 	margin: 2em auto 0;
 }
+
+html {
+	height: 100%
+}
+
+body {
+	min-height: 100%;
+	display: grid;
+	grid-template-rows: 1fr auto;
+}
+
+#page-footer {
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.ui.card > .image > img, .ui.cards > .card > .image > img {
+    height: 290px;
+    object-fit: cover;
+}
