--- a/flytinerary-front-end/styles.css
+++ b/flytinerary-front-end/styles.css
@@ -7,9 +7,14 @@
 }
 
 #agenda-page,
-#new-trip-form {
+#new-trip-form,
+#new-event-form {
 	width: 70%;
 	margin: auto;
+}
+
+#form-container {
+	display: none;
 }
 
 .ui.menu {
@@ -41,7 +46,7 @@ hr.short {
 	background-color:#000;
 	width:75%;
 	text-align:center;
-	margin: 2em auto 0;
+	margin: 5em auto 1em;
 }
 
 html {
