--- a/flytinerary-front-end/styles.css
+++ b/flytinerary-front-end/styles.css
@@ -61,8 +61,12 @@ body {
 }
 
 #page-footer {
-	grid-row-start: 2;
-	grid-row-end: 3;
+	/*grid-row-start: 2;
+	grid-row-end: 3;*/
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
 }
 
 .ui.card > .image > img, .ui.cards > .card > .image > img {
