--- a/flytinerary-front-end/styles.css
+++ b/flytinerary-front-end/styles.css
@@ -9,7 +9,8 @@
 #agenda-page,
 #new-trip-form,
 #new-event-form,
-#log-in-form {
+#log-in-form,
+#new-traveller-form {
 	width: 70%;
 	margin: auto;
 }
@@ -33,6 +34,10 @@
 
 #add-event-btn {
 	margin-right: 15%;
+}
+
+#sign-up-btn {
+	margin-right: calc(1rem);
 }
 
 #home-btn {
